package org.dawndreamer.mina.contract.element.protocol;

/**
 * @author zhangsiming
 */
public interface ByteContractElement {

    String getName();

    int getContentLength();

}
