package org.dawndreamer.mina.contract.element.protocol;

/**
 * <p>Title: ProtocolEnum</p>
 * <p>Description: Function Description</p>
 *
 * <p>@Author: zhangsiming</p>
 * <p>@Date: 2019/1/17 17:03</p>
 */
public enum ProtocolEnum {
    /**
     * 发送类型的协议
     */
    SEND,

    /**
     * 接收类型的协议
     */
    RECEIVE;
}
