package org.dawndreamer.mina.contract.specification;


import org.dawndreamer.mina.contract.element.protocol.ByteContractProtocolSegment;

/**
 * @author zhangsiming
 */
public class ByteContractProtocolBody extends ByteContractProtocolSegment {

    public ByteContractProtocolBody() {
    }

}
